fix-button color contrast

--- a/easybank-landing-page/css/style.css
+++ b/easybank-landing-page/css/style.css
@@ -274,7 +274,7 @@ a[class="button"] {
 
 a[class="button"] {
     background: var(--color-gradient-accent);
-    color: var(--clr-white);
+    color: var(--clr-dark-blue);
     border-radius: 50px;
     padding-inline: var(--space-m);
     padding-block: var(--space-2xs);
@@ -538,6 +538,10 @@ h1, h2, h3, button {
 
 .site-foot a {
     color: var(--color-light);  
+}
+
+.site-foot a[class="button"] {
+    color: var(--clr-dark-blue);  
 }
 
 .site-foot .site-brand {
